# deepstream-3d-depth-camera

./: .env  .gitignore  Doxyfile  Makefile  README.md
.build/: vms_release_nvidia.sh  vms_setup.sh
.docker/nvidia/: Dockerfile
.docker/nvidia/apt/: general.pkglist  project.pkglist
.docker/nvidia/scripts/: install.sh  install_cmake.sh
src/: .clang-format  CMakeLists.txt  deepstream_3d_context.hpp  main.cpp
src/3d/common/: abi_dataprocess.h  abi_frame.h  abi_obj.h  common.h  config.h  func_utils.h  idatatype.h  type_trait.h  typeid.h
src/3d/common/hpp/: datafilter.hpp  dataloader.hpp  datamap.hpp  dataprocess.hpp  datarender.hpp  frame.hpp  obj.hpp  profiling.hpp  yaml_config.hpp
src/3d/gst/: custom_lib_factory.h  nvds3d_gst_plugin.h  nvds3d_gst_ptr.h  nvds3d_meta.h
src/cmake/: nvds.cmake  yaml.cmake
src/configs/: ds_3d_realsense_depth_capture_render.yaml  ds_3d_realsense_depth_to_point_cloud.yaml  example_point_cloud.yaml  example_render.yaml
src/ds3d/common/: type_trait.h
src/ds3d/common/hpp/: dataloader.hpp
src/modules/3d/: CMakeLists.txt
src/modules/3d/3dgst/: CMakeLists.txt  custom_lib_factory.h  nvds3d_gst_plugin.h  nvds3d_gst_ptr.h  nvds3d_meta.h
src/modules/3d/common/: CMakeLists.txt  abi_dataprocess.h  abi_frame.h  abi_obj.h  abi_window.h  common.h  config.h  defines.h  func_utils.h  idatatype.h  type_trait.h  typeid.h
src/modules/3d/hpp/: CMakeLists.txt  datafilter.hpp  dataloader.hpp  datamap.hpp  dataprocess.hpp  datarender.hpp  frame.hpp  obj.hpp  profiling.hpp  yaml_config.hpp
src/modules/application/: CMakeLists.txt  application.cpp  application.h  callbacks.hpp  camera.cpp  camera.h  camera.hpp  context.hpp
